test/functions/lydia/genericActualTypeArg.good
genericActualTypeArg.chpl:6: error: the type of the actual argument 'Foo' is generic
